--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.19.1",
+    "node-cron": "^3.0.0",
     "nodemon": "^2.0.7"
   }
 }
